Verify ticket and some minor changes

--- a/emails/event.html
+++ b/emails/event.html
@@ -58,7 +58,7 @@
       <h1>Virtual Ticket</h1>
       <p>Hello {{clientName}},</p>
       <p>
-        Thank you for booking a ticket through the ReserveET service. To verify
+        Thank you for booking a ticket through Peomax reservation. To verify
         your virtual ticket, scan the QR code below at the site of the event.
       </p>
       <div class="qrcode-container">
@@ -86,7 +86,7 @@
           support team.
         </p>
         <p>Thank you,</p>
-        <p>ReserveET</p>
+        <p><a href="https://peomax.com">@peomax.com</a></p>
       </div>
     </div>
   </body>
