--- a/emails/reserve.html
+++ b/emails/reserve.html
@@ -52,8 +52,8 @@
       <h1>Reservation Successful!</h1>
       <p>Hello {{clientName}},</p>
       <p>
-        Thank you for making a reservation through the ReserveET app, A table
-        will be prepared for your arrival at your destination.
+        Thank you for making a reservation through the Peomax app, A table will
+        be prepared for your arrival at your destination.
       </p>
       <div class="qrcode-container">
         <img
@@ -72,7 +72,7 @@
           support team.
         </p>
         <p>Thank you,</p>
-        <p>ReserveET</p>
+        <p>Peomax</p>
       </div>
     </div>
   </body>
