--- a/emails/reserve.html
+++ b/emails/reserve.html
@@ -56,11 +56,7 @@
         be prepared for your arrival at your destination.
       </p>
       <div class="qrcode-container">
-        <img
-          class="qrcode-image"
-          src="cid:uniqzzue3423423@kre234234ata.e234234e"
-          alt="QR Code"
-        />
+        <img class="qrcode-image" src="cid:6044075355" alt="QR Code" />
       </div>
       <p class="note">
         Note: If you do not attend at your reserved spot in time, your
@@ -69,7 +65,8 @@
       <div class="footer">
         <p>
           If you have any questions or need assistance, please contact our
-          support team.
+          support team. Visit <a href="https://peomax.com">@peomax.com</a> for
+          more information.
         </p>
         <p>Thank you,</p>
         <p>Peomax</p>
