--- a/emails/accepted.html
+++ b/emails/accepted.html
@@ -52,13 +52,16 @@
       <h1>Reservation Successful!</h1>
       <p>Hello {{clientName}},</p>
       <p>
-        Thank you for requesting a reservation through the Peomax app, Your
-        reservation is currently being evaluated at your destination.
+        Thank you for making a reservation through the Peomax app, A table will
+        be prepared for your arrival at your destination.
       </p>
       <div class="qrcode-container">
         <img class="qrcode-image" src="cid:6044075355" alt="QR Code" />
       </div>
-      <p class="note">Note: You wil be notified once it is accepted.</p>
+      <p class="note">
+        Note: If you do not attend at your reserved spot in time, your
+        reservation might be cancelled.
+      </p>
       <div class="footer">
         <p>
           If you have any questions or need assistance, please contact our
