--- a/emails/reserve.html
+++ b/emails/reserve.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Reservation Successful</title>
+    <title>Reservation Submitted</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -49,11 +49,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>Reservation Successful!</h1>
+      <h1>Reservation Submitted!</h1>
       <p>Hello {{clientName}},</p>
       <p>
         Thank you for requesting a reservation through the Peomax app, Your
-        reservation is currently being evaluated at your destination.
+        reservation is currently being evaluated at your destination. You will
+        receive a confirmation email once it is accepted.
       </p>
       <div class="qrcode-container">
         <img class="qrcode-image" src="cid:6044075355" alt="QR Code" />
