--- a/emails/verification.html
+++ b/emails/verification.html
@@ -49,7 +49,7 @@
       }
 
       .verification-code .code {
-        background-color: #33ea70;
+        background-color: #e84a3f;
         color: white;
         font-size: 32px;
         padding: 10px;
