Added reservation details

--- a/emails/accepted.html
+++ b/emails/accepted.html
@@ -76,6 +76,12 @@
         <h2>Your reservation ID:</h2>
         <p class="code">{{ID}}</p>
       </div>
+      <ul>
+        <li>Destination: {{place}}</li>
+        <li>Location: {{location}}</li>
+        <li>Time: {{time}}</li>
+        <li>No. of People: {{people}}</li>
+      </ul>
       <div class="footer">
         <p>
           If you have any questions or need assistance, please contact our
