Changed some text

--- a/emails/reserve.html
+++ b/emails/reserve.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Reservation Submitted</title>
+    <title>Reservation Processing</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Reservation Submitted!</h1>
+      <h1>Reservation Processing!</h1>
       <p>Hello {{clientName}},</p>
       <p>
         Thank you for requesting a reservation through the Peomax app, Your
