Added event name to virtual ticket

--- a/emails/event.html
+++ b/emails/event.html
@@ -71,6 +71,7 @@
       <ul>
         <br />
         <h3>ticket detail</h3>
+        <li><strong>Event: </strong> {{eventName}}</li>
         <li><strong>People: </strong> {{people}}</li>
         <li><strong>Date: </strong> {{date}}</li>
         <li><strong>Time: </strong> {{time}}</li>
