Updated reject email template

--- a/emails/rejected.html
+++ b/emails/rejected.html
@@ -62,8 +62,8 @@
       <h1>Reservation Rejected</h1>
       <p>Hello {{clientName}},</p>
       <p>
-        Hello {{clientName}},Unfortunately, we have to cancel your reservation
-        made through the Peomax app due to an inconvenience.<br />
+        Unfortunately, we have to cancel your reservation made through the
+        Peomax app due to an inconvenience.<br />
         We apologize for any inconvenience this may have caused you.
       </p>
       <div class="qrcode-container">
